Create all role and rolebindings in each namespace
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -12,6 +12,11 @@ cpfs:
 # operatorNamespace: ""
 # servicesNamespace: ""
 
+global:
+  tetheredNamespace: [tenant1,tenant2]
+  operatorNamespace: operator-ns
+  instanceNamespace: services-ns
+
 # CR configurations
 
 commonServiceSpec:
