--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -3,6 +3,6 @@ resources:
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
-- name: controller
+- name: icr.io/cpopen/common-service-operator
   newName: icr.io/cpopen/common-service-operator
-  newTag: latest
+  newTag: 4.11.0
