skip creating role in empty instance namespace
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -13,9 +13,9 @@ cpfs:
 # servicesNamespace: ""
 
 global:
-  tetheredNamespace: [tenant1,tenant2]
+  tetheredNamespace: []
   operatorNamespace: operator-ns
-  instanceNamespace: services-ns
+  instanceNamespace:
 
 # CR configurations
 
