Create all role and rolebindings in each namespace (#2387)
* Create all role and rolebindings in each namespace

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* skip creating role in empty instance namespace

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

---------

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -12,6 +12,11 @@ cpfs:
 # operatorNamespace: ""
 # servicesNamespace: ""
 
+global:
+  tetheredNamespace: []
+  operatorNamespace: operator-ns
+  instanceNamespace:
+
 # CR configurations
 
 commonServiceSpec:
