--- a/bedrock-migration/templates/bedrock-migration-job.yaml
+++ b/bedrock-migration/templates/bedrock-migration-job.yaml
@@ -112,10 +112,10 @@ spec:
                 fi
                 {{- end }}
 
-                #get nss roles?
-                echo "Roles to delete: ${roles}"
-
-                if [[ ! -z $roles ]]; then
+                if [[ -z $roles ]]; then
+                  echo "No roles present in namespace $ns, skipping..."
+                else
+                  echo "Roles to delete: ${roles}"
                   oc delete role $roles -n $ns --ignore-not-found
                   oc delete rolebindings $roles -n $ns --ignore-not-found
                 fi
