use full subscription name
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/bedrock-migration/templates/bedrock-migration-job.yaml
+++ b/bedrock-migration/templates/bedrock-migration-job.yaml
@@ -27,27 +27,27 @@ spec:
             if [[ -z $nssSub ]]; then
               echo "NamespaceScope Subscription not present in operator namespace $operatorNamespace, skipping deleting Subscription and CSV."
             else
-              nssCSV=$(oc get --ignore-not-found sub $nssSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+              nssCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $nssSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
               echo "Deleting NamespaceScope CSV and Subscription in operator namespace $operatorNamespace..."
-              oc delete --ignore-not-found csv $nssCSV -n $operatorNamespace && oc delete --ignore-not-found sub $nssSub -n $operatorNamespace
+              oc delete --ignore-not-found csv $nssCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $nssSub -n $operatorNamespace
             fi
             
             csSub=$(oc get subscription.operators.coreos.com -n "$operatorNamespace" -o jsonpath="{.items[?(@.spec.name=='ibm-common-service-operator')].metadata.name}")
             if [[ -z $csSub ]]; then
               echo "Common Service Subscription not present in operator namespace $operatorNamespace, skipping deleting Subscription and CSV."
             else
-              csCSV=$(oc get --ignore-not-found sub $csSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+              csCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $csSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
               echo "Deleting Common Service CSV and Subscription in operator namespace $operatorNamespace..."
-              oc delete --ignore-not-found csv $csCSV -n $operatorNamespace && oc delete --ignore-not-found sub $csSub -n $operatorNamespace
+              oc delete --ignore-not-found csv $csCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $csSub -n $operatorNamespace
             fi
             
             odlmSub=$(oc get subscription.operators.coreos.com -n "$operatorNamespace" -o jsonpath="{.items[?(@.spec.name=='ibm-odlm')].metadata.name}")
             if [[ -z $odlmSub ]]; then
               echo "ODLM Subscription not present in operator namespace $operatorNamespace, skipping deleting Subscription and CSV."
             else
-              odlmCSV=$(oc get --ignore-not-found sub $odlmSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+              odlmCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $odlmSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
               echo "Deleting ODLM CSV and Subscription in operator namespace $operatorNamespace..."
-              oc delete --ignore-not-found csv $odlmCSV -n $operatorNamespace && oc delete --ignore-not-found sub $odlmSub -n $operatorNamespace
+              oc delete --ignore-not-found csv $odlmCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $odlmSub -n $operatorNamespace
             fi
             
             {{- if .Values.zen.iamIntegration }}
@@ -57,27 +57,27 @@ spec:
             if [[ -z $iamSub ]]; then
               echo "IM Subscription not present in operator namespace $operatorNamespace, skipping deleting Subscription and CSV."
             else
-              iamCSV=$(oc get --ignore-not-found sub $iamSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+              iamCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $iamSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
               echo "Deleting IM CSV and Subscription in operator namespace $operatorNamespace..."
-              oc delete --ignore-not-found csv $iamCSV -n $operatorNamespace && oc delete --ignore-not-found sub $iamSub -n $operatorNamespace
+              oc delete --ignore-not-found csv $iamCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $iamSub -n $operatorNamespace
             fi
             
             uiSub=$(oc get subscription.operators.coreos.com -n "$operatorNamespace" -o jsonpath="{.items[?(@.spec.name=='ibm-commonui-operator-app')].metadata.name}")
             if [[ -z $uiSub ]]; then
               echo "Common UI Subscription not present in operator namespace $operatorNamespace, skipping deleting Subscription and CSV."
             else
-              uiCSV=$(oc get --ignore-not-found sub $uiSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+              uiCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $uiSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
               echo "Deleting Common UI CSV and Subscription in operator namespace $operatorNamespace..."
-              oc delete --ignore-not-found csv $uiCSV -n $operatorNamespace && oc delete --ignore-not-found sub $uiSub -n $operatorNamespace
+              oc delete --ignore-not-found csv $uiCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $uiSub -n $operatorNamespace
             fi
             
             edbSub=$(oc get subscription.operators.coreos.com -n "$operatorNamespace" -o jsonpath="{.items[?(@.spec.name=='cloud-native-postgresql')].metadata.name}")
             if [[ -z $edbSub ]]; then
               echo "EDB Subscription not present in operator namespace $operatorNamespace, skipping deleting Subscription and CSV."
             else
-              edbCSV=$(oc get --ignore-not-found sub $edbSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+              edbCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $edbSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
               echo "Deleting EDB CSV and Subscription in operator namespace $operatorNamespace..."
-              oc delete --ignore-not-found csv $edbCSV -n $operatorNamespace && oc delete --ignore-not-found sub $edbSub -n $operatorNamespace
+              oc delete --ignore-not-found csv $edbCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $edbSub -n $operatorNamespace
             fi
 
             echo "Deleting IM, UI, and EDB ServiceAccounts and Jobs in operator namespace $operatorNamespace and services namespace $servicesNamespace..."
