Add corresponding metadata to pass RH certification (#2389)
* add OCP version annotation in bundle matedata

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

* add metadata label into container image

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

* set versioned image in manifest

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

* general new bundle manifest at end of next-csv.sh

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

* update version in Makefile and annotations

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

---------

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -22,8 +22,8 @@ metadata:
       ]
     capabilities: Seamless Upgrades
     cloudPakThemesVersion: styles4100.css
-    containerImage: icr.io/cpopen/common-service-operator:latest
-    createdAt: "2025-02-13T21:51:07Z"
+    containerImage: icr.io/cpopen/common-service-operator:4.11.0
+    createdAt: "2025-02-14T20:37:49Z"
     description: The IBM Cloud Pak foundational services operator is used to deploy IBM foundational services.
     features.operators.openshift.io/disconnected: "true"
     features.operators.openshift.io/fips-compliant: "true"
@@ -387,7 +387,7 @@ spec:
                         value: "false"
                       - name: OPERATOR_NAME
                         value: ibm-common-service-operator
-                    image: icr.io/cpopen/common-service-operator:latest
+                    image: icr.io/cpopen/common-service-operator:4.11.0
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       failureThreshold: 10
