Add corresponding metadata to pass RH certification (#2389)
* add OCP version annotation in bundle matedata

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

* add metadata label into container image

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

* set versioned image in manifest

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

* general new bundle manifest at end of next-csv.sh

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

* update version in Makefile and annotations

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

---------

Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -22,7 +22,7 @@ metadata:
       ]
     capabilities: Seamless Upgrades
     cloudPakThemesVersion: styles467.css
-    containerImage: icr.io/cpopen/common-service-operator:latest
+    containerImage: icr.io/cpopen/common-service-operator:4.6.12
     createdAt: "2025-03-06T19:45:25Z"
     description: The IBM Cloud Pak foundational services operator is used to deploy IBM foundational services.
     nss.operator.ibm.com/managed-operators: ibm-common-service-operator
@@ -375,7 +375,7 @@ spec:
                             fieldPath: metadata.annotations['olm.targetNamespaces']
                       - name: OPERATOR_NAME
                         value: ibm-common-service-operator
-                    image: icr.io/cpopen/common-service-operator:latest
+                    image: icr.io/cpopen/common-service-operator:4.6.12
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       failureThreshold: 10
