--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,2 +1,8 @@
 resources:
 - manager.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+images:
+- name: icr.io/cpopen/common-service-operator
+  newName: icr.io/cpopen/common-service-operator
+  newTag: 4.6.12
