--- a/bedrock-migration/templates/bedrock-migration-job.yaml
+++ b/bedrock-migration/templates/bedrock-migration-job.yaml
@@ -30,6 +30,11 @@ spec:
               nssCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $nssSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
               echo "Deleting NamespaceScope CSV and Subscription in operator namespace $operatorNamespace..."
               oc delete --ignore-not-found csv $nssCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $nssSub -n $operatorNamespace
+              oc delete namespacescopes.operator.ibm.com common-service -n $operatorNamespace --ignore-not-found --timeout=10s
+              if [ $? -ne 0 ]; then
+                  info "Failed to delete NSS CR, patching its finalizer to null..."
+                  oc patch namespacescopes.operator.ibm.com common-service -n $operatorNamespace --type="json" -p '[{"op": "remove", "path":"/metadata/finalizers"}]'
+              fi
             fi
             
             csSub=$(oc get subscription.operators.coreos.com -n "$operatorNamespace" -o jsonpath="{.items[?(@.spec.name=='ibm-common-service-operator')].metadata.name}")
