--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -70,14 +70,8 @@ spec:
               fieldPath: metadata.namespace
         - name: WATCH_NAMESPACE
           valueFrom:
-            configMapKeyRef:
-              name: namespace-scope
-              key: namespaces
-              optional: true
-        - name: NO_OLM
-          value: 'true'
-        - name: ENABLE_WEBHOOKS
-          value: 'false'
+            fieldRef:
+              fieldPath: metadata.annotations['olm.targetNamespaces']
         - name: OPERATOR_NAME
           value: "ibm-common-service-operator"
         resources:
