--- a/bedrock-migration/templates/bedrock-migration-job.yaml
+++ b/bedrock-migration/templates/bedrock-migration-job.yaml
@@ -12,9 +12,7 @@ spec:
     spec:
       containers:
       - name: bedrock-migration-job
-        #should we be using our own image or the cpd image? I vote our own
-        # image: '{{ .Values.global.imagePullPrefix }}/{{ .Values.global.migrationJobImgName }}@{{ .Values.global.migrationJobImgDigest }}'
-        image: icr.io/cpopen/cpfs/cpfs-utils:4.6.7
+        image: {{ .Values.global.imagePullPrefix }}/{{ .Values.cpfs.imageRegistryNamespaceOperator }}/cpfs-utils:4.6.7
         command:
           - bash
           - -c
@@ -24,39 +22,73 @@ spec:
             servicesNamespace={{ .Values.global.instanceNamespace }}
             namespaces=$(oc get cm namespace-scope -n $operatorNamespace -o jsonpath="{.data.namespaces}")
 
+            
             nssSub=$(oc get subscription.operators.coreos.com -n "$operatorNamespace" -o jsonpath="{.items[?(@.spec.name=='ibm-namespace-scope-operator')].metadata.name}")
-            nssCSV=$(oc get --ignore-not-found sub $nssSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
-            nssVersion=$(oc get --ignore-not-found csv $nssCSV -n $operatorNamespace -o jsonpath='{.spec.version}')
-
+            if [[ -z $nssSub ]]; then
+              echo "NamespaceScope Subscription not present in operator namespace $operatorNamespace, skipping deleting Subscription and CSV."
+            else
+              nssCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $nssSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+              echo "Deleting NamespaceScope CSV and Subscription in operator namespace $operatorNamespace..."
+              oc delete --ignore-not-found csv $nssCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $nssSub -n $operatorNamespace
+              oc delete namespacescopes.operator.ibm.com common-service -n $operatorNamespace --ignore-not-found --timeout=10s
+              if [ $? -ne 0 ]; then
+                  info "Failed to delete NSS CR, patching its finalizer to null..."
+                  oc patch namespacescopes.operator.ibm.com common-service -n $operatorNamespace --type="json" -p '[{"op": "remove", "path":"/metadata/finalizers"}]'
+              fi
+            fi
+            
             csSub=$(oc get subscription.operators.coreos.com -n "$operatorNamespace" -o jsonpath="{.items[?(@.spec.name=='ibm-common-service-operator')].metadata.name}")
-            csCSV=$(oc get --ignore-not-found sub $csSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
-            csVersion=$(oc get --ignore-not-found csv $csCSV -n $operatorNamespace -o jsonpath='{.spec.version}')
-
+            if [[ -z $csSub ]]; then
+              echo "Common Service Subscription not present in operator namespace $operatorNamespace, skipping deleting Subscription and CSV."
+            else
+              csCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $csSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+              echo "Deleting Common Service CSV and Subscription in operator namespace $operatorNamespace..."
+              oc delete --ignore-not-found csv $csCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $csSub -n $operatorNamespace
+            fi
+            
             odlmSub=$(oc get subscription.operators.coreos.com -n "$operatorNamespace" -o jsonpath="{.items[?(@.spec.name=='ibm-odlm')].metadata.name}")
-            odlmCSV=$(oc get --ignore-not-found sub $odlmSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
-            odlmVersion=$(oc get --ignore-not-found csv $odlmCSV -n $operatorNamespace -o jsonpath='{.spec.version}')
+            if [[ -z $odlmSub ]]; then
+              echo "ODLM Subscription not present in operator namespace $operatorNamespace, skipping deleting Subscription and CSV."
+            else
+              odlmCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $odlmSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+              echo "Deleting ODLM CSV and Subscription in operator namespace $operatorNamespace..."
+              oc delete --ignore-not-found csv $odlmCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $odlmSub -n $operatorNamespace
+            fi
             
-            echo "Deleting CS, NSS, and ODLM CSVs and Subscriptions..."
-            oc delete --ignore-not-found csv $csCSV -n $operatorNamespace && oc delete --ignore-not-found sub $csSub -n $operatorNamespace
-            oc delete --ignore-not-found csv $nssCSV -n $operatorNamespace && oc delete --ignore-not-found sub $nssSub -n $operatorNamespace
-            oc delete --ignore-not-found csv $odlmCSV -n $operatorNamespace && oc delete --ignore-not-found sub $odlmSub -n $operatorNamespace
-            
-            {{- if .Values.imEnabled }}
             echo "Deleting IAM, Common UI, and EDB resources in operator namespace $operatorNamespace..."
+            
             iamSub=$(oc get subscription.operators.coreos.com -n "$operatorNamespace" -o jsonpath="{.items[?(@.spec.name=='ibm-iam-operator')].metadata.name}")
-            iamCSV=$(oc get --ignore-not-found sub $iamSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+            if [[ -z $iamSub ]]; then
+              echo "IM Subscription not present in operator namespace $operatorNamespace, skipping deleting Subscription and CSV."
+            else
+              iamCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $iamSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+              echo "Deleting IM CSV and Subscription in operator namespace $operatorNamespace..."
+              oc delete --ignore-not-found csv $iamCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $iamSub -n $operatorNamespace
+            fi
+            
             uiSub=$(oc get subscription.operators.coreos.com -n "$operatorNamespace" -o jsonpath="{.items[?(@.spec.name=='ibm-commonui-operator-app')].metadata.name}")
-            uiCSV=$(oc get --ignore-not-found sub $uiSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+            if [[ -z $uiSub ]]; then
+              echo "Common UI Subscription not present in operator namespace $operatorNamespace, skipping deleting Subscription and CSV."
+            else
+              uiCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $uiSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+              echo "Deleting Common UI CSV and Subscription in operator namespace $operatorNamespace..."
+              oc delete --ignore-not-found csv $uiCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $uiSub -n $operatorNamespace
+            fi
+            
             edbSub=$(oc get subscription.operators.coreos.com -n "$operatorNamespace" -o jsonpath="{.items[?(@.spec.name=='cloud-native-postgresql')].metadata.name}")
-            edbCSV=$(oc get --ignore-not-found sub $edbSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
-            oc delete --ignore-not-found csv $iamCSV -n $operatorNamespace && oc delete --ignore-not-found sub $iamSub -n $operatorNamespace
-            oc delete --ignore-not-found csv $uiCSV -n $operatorNamespace && oc delete --ignore-not-found sub $uiSub -n $operatorNamespace
-            oc delete --ignore-not-found csv $edbCSV -n $operatorNamespace && oc delete --ignore-not-found sub $edbSub -n $operatorNamespace
+            if [[ -z $edbSub ]]; then
+              echo "EDB Subscription not present in operator namespace $operatorNamespace, skipping deleting Subscription and CSV."
+            else
+              edbCSV=$(oc get --ignore-not-found subscription.operators.coreos.com $edbSub -n $operatorNamespace -o jsonpath='{.status.currentCSV}')
+              echo "Deleting EDB CSV and Subscription in operator namespace $operatorNamespace..."
+              oc delete --ignore-not-found csv $edbCSV -n $operatorNamespace && oc delete --ignore-not-found subscription.operators.coreos.com $edbSub -n $operatorNamespace
+            fi
+
+            echo "Deleting IM, UI, and EDB ServiceAccounts and Jobs in operator namespace $operatorNamespace and services namespace $servicesNamespace..."
             oc delete --ignore-not-found sa postgresql-operator-manager edb-license-sa -n $operatorNamespace
             oc delete --ignore-not-found sa ibm-iam-operand-restricted ibm-commonui-operand common-service-db -n $servicesNamespace
             oc delete --ignore-not-found role edb-license-role -n $operatorNamespace
             oc delete --ignore-not-found job create-postgres-license-config -n $operatorNamespace
-            {{- end }}
 
             #loop for removing roles from services and tethered namespace
             echo "Cleaning up roles and rolebindings in namespaces $namespaces..."
@@ -67,25 +99,32 @@ spec:
                 roles="${roles} $(oc get roles -n $ns | grep ibm-common-service-op | awk '{print $1}' | tr "\n" " ")"
                 #get odlm roles
                 roles="${roles} $(oc get roles -n $ns | grep operand-deployment-l | awk '{print $1}' | tr "\n" " ")"
-                {{- if .Values.imEnabled }}
+                
                 #get iam roles
                 roles="${roles} $(oc get roles -n $ns | grep ibm-iam | awk '{print $1}' | tr "\n" " ")"
+                
                 #get ui roles
                 roles="${roles} $(oc get roles -n $ns | grep ibm-commonui | awk '{print $1}' | tr "\n" " ")"
+                
                 #get edb roles
                 roles="${roles} $(oc get roles -n $ns | grep postgresql-operator-controller-manager | awk '{print $1}' | tr "\n" " ")"
                 roles="${roles} $(oc get roles -n $ns | grep cloud-native-postgresql | awk '{print $1}' | tr "\n" " ")"
                 roles="${roles} $(oc get roles -n $ns | grep common-service-db | awk '{print $1}' | tr "\n" " ")"
+                
                 if [[ $ns != $servicesNamespace ]]; then
                     edbSA=$(oc get sa -n $ns --ignore-not-found | grep postgresql-operator-controller-manager | awk '{print $1}' | tr "\n" " ")
-                    oc delete sa $edbSA -n $ns --ignore-not-found
+                    if [[ ${edbSA// /} != "" ]]; then
+                      oc delete sa $edbSA -n $ns --ignore-not-found
+                    fi
                 fi
-                {{- end }}
-                #get nss roles?
-                echo "${roles}"
 
-                oc delete role $roles -n $ns --ignore-not-found
-                oc delete rolebindings $roles -n $ns --ignore-not-found
+                if [[ -z ${roles// /} ]]; then
+                  echo "No roles present in namespace $ns, skipping..."
+                else
+                  echo "Roles to delete: ${roles}"
+                  oc delete role $roles -n $ns --ignore-not-found
+                  oc delete rolebindings $roles -n $ns --ignore-not-found
+                fi
                 echo "Namespace $ns complete."
             done
       restartPolicy: Never
