--- a/bedrock-migration/templates/rbac.yaml
+++ b/bedrock-migration/templates/rbac.yaml
@@ -68,13 +68,17 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: bedrock-migration-job-role
-{{- if .Values.global.instanceNamespace }}
+{{- $watchNamespaces := .Values.global.tetheredNamespace | default list -}}
+{{- if .Values.global.instanceNamespace -}}
+{{- $watchNamespaces = append $watchNamespaces .Values.global.instanceNamespace -}}
+{{- end -}}
+{{- range $namespace := $watchNamespaces | uniq }}
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: bedrock-migration-job-role
-  namespace: {{ .Values.global.instanceNamespace }}
+  namespace: {{ $namespace }}
   annotations:
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-1"
@@ -102,54 +106,7 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: bedrock-migration-job-rb
-  namespace: {{ .Values.global.instanceNamespace }}
-  annotations:
-    "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "-1"
-subjects:
-  - kind: ServiceAccount
-    name: bedrock-migration-job-sa
-    namespace: {{ .Values.global.operatorNamespace }}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: bedrock-migration-job-role
-{{- end }}
-{{- range $i := .Values.global.tetheredNamespaces }}
----
-kind: Role
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: bedrock-migration-job-role
-  namespace: {{ $i }}
-  annotations:
-    "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "-1"
-rules:
-- apiGroups: 
-  - "rbac.authorization.k8s.io"
-  resources:
-  - roles
-  - rolebindings
-  verbs:
-  - list
-  - get
-  - delete
-- apiGroups: 
-  - ""
-  resources:
-  - configmaps
-  - serviceaccounts
-  verbs:
-  - list
-  - get
-  - delete
----
-kind: RoleBinding
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: bedrock-migration-job-rb
-  namespace: {{ $i }}
+  namespace: {{ $namespace }}
   annotations:
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-1"
