--- a/velero/schedule/schedule-common-services.yaml
+++ b/velero/schedule/schedule-common-services.yaml
@@ -44,3 +44,16 @@ spec:
         - keycloak-data #pgdump approach to BR keycloak data
         - keycloak #velero plugin approach to BR keycloak data
         - user-mgmt #non-data user-management operator resources
+        - cs-chart
+        - cs-cluster
+        - odlm-chart
+        - odlm-cluster
+        - ui-chart
+        - ui-cluster
+        - zen-chart
+        - zen-cluster
+        - edb-chart
+        - edb-cluster
+        - iam-chart
+        - iam-cluster
+        - nss-cluster
