--- a/velero/restore/restore-nss.yaml
+++ b/velero/restore/restore-nss.yaml
@@ -1,7 +1,7 @@
 apiVersion: velero.io/v1
 kind: Restore
 metadata:
-  name: restore-catalog
+  name: restore-nss
   namespace: velero
 spec:
   backupName: __BACKUP_NAME__
