--- a/velero/schedule/schedule-common-services.yaml
+++ b/velero/schedule/schedule-common-services.yaml
@@ -44,6 +44,7 @@ spec:
         - keycloak-data #pgdump approach to BR keycloak data
         - keycloak #velero plugin approach to BR keycloak data
         - user-mgmt #non-data user-management operator resources
+        - nss
         - cs-chart
         - cs-cluster
         - odlm-chart
