rebased master into future and porting over final changes to master (#2402)
* Add label to helm generated resources (#2382)

* add label to cs cr and cpfs object to values

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update values

Signed-off-by: Allen Li <liyuchen223@gmail.com>

---------

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* Create all role and rolebindings in each namespace (#2387)

* Create all role and rolebindings in each namespace

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* skip creating role in empty instance namespace

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

---------

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* create olm -> no olm migration chart in master branch (#2379)

* create migration job in master branch

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* revert value to empty state

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* change version value

* remove version from job name due to error

* add logging lines

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update tethered namespaces

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

---------

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* Polish migration job (#2391)

* add error handling, debugging, and logs

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update rbac generation

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update rbac generation

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update rbac generation

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update rbac generation

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update image value

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* improve error handling

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* typo

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* debug

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* debug



--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,6 +1,7 @@
 # Note there are no leading or trailing /'s
-imageRegistryNamespaceOperator: cpopen
-imageRegistryNamespaceOperand: cpopen/cpfs
+cpfs:
+  imageRegistryNamespaceOperator: cpopen
+  imageRegistryNamespaceOperand: cpopen/cpfs
 
 # Commented out values are handled by a global values file
 # imagePullPrefix: icr.io
@@ -10,6 +11,11 @@ imageRegistryNamespaceOperand: cpopen/cpfs
 # following are examples, not required:
 # operatorNamespace: ""
 # servicesNamespace: ""
+
+global:
+  tetheredNamespace: []
+  operatorNamespace: operator-ns
+  instanceNamespace:
 
 # CR configurations
 
