--- a/bedrock-migration/values.yaml
+++ b/bedrock-migration/values.yaml
@@ -7,3 +7,6 @@ global:
   tetheredNamespace: [""]
   imagePullPrefix: icr.io
   imagePullSecret: ibm-entitlement-key
+
+cpfs:
+  imageRegistryNamespaceOperand: cpopen/cpfs
