--- a/velero/restore/no-olm/restore-im-ns-charts.yaml
+++ b/velero/restore/no-olm/restore-im-ns-charts.yaml
@@ -1,7 +1,7 @@
 apiVersion: velero.io/v1
 kind: Restore
 metadata:
-  name: restore-namespace-charts
+  name: restore-im-charts
   namespace: velero
 spec:
   backupName: __BACKUP_NAME__
