--- a/bedrock-migration/Chart.yaml
+++ b/bedrock-migration/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: bedrock-migration
+name: cpfs-migration
 description: A Helm chart for migrating Bedrock from OLM to No OLM
 type: application
 version: 0.0.0
