--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -13,7 +13,7 @@ cpfs:
 # servicesNamespace: ""
 
 global:
-  tetheredNamespace: []
+  tetheredNamespaces: []
   operatorNamespace: operator-ns
   instanceNamespace:
 
