--- a/bedrock-migration/values.yaml
+++ b/bedrock-migration/values.yaml
@@ -4,7 +4,7 @@ imEnabled: "true" #should this be a global value? Is there a better way to deter
 global:
   operatorNamespace: "cs-op"
   instanceNamespace: "cs-serv"
-  tetheredNamespace: [""]
+  tetheredNamespaces: [""]
   imagePullPrefix: icr.io
   imagePullSecret: ibm-entitlement-key
 
