add nss field to schedule

--- a/velero/schedule/schedule-common-services.yaml
+++ b/velero/schedule/schedule-common-services.yaml
@@ -44,3 +44,4 @@ spec:
         - keycloak-data #pgdump approach to BR keycloak data
         - keycloak #velero plugin approach to BR keycloak data
         - user-mgmt #non-data user-management operator resources
+        - nss
